make code not to return a part of payload when a new applicant record is created
